# STAIL

./: .gitignore  README.md  V001__realty_os_full_schema.sql  architecture.md  docker-compose.yml  instruction.md
agents/buyer-agent/: .env.example  Dockerfile  README.md  pyproject.toml
agents/buyer-agent/agent/: __init__.py  buyer_agent.py  config.py  main.py
agents/buyer-agent/models/: __init__.py  schemas.py
agents/buyer-agent/tests/: __init__.py  test_buyer_agent.py
agents/buyer-agent/tools/: __init__.py
agents/crm-agent/: .env.example  Dockerfile  pyproject.toml
agents/crm-agent/agent/: __init__.py  config.py  crm_agent.py  main.py
agents/crm-agent/models/: __init__.py  schemas.py
agents/crm-agent/tests/: __init__.py  test_crm_agent.py
agents/crm-agent/tools/: __init__.py
agents/lead-qualification-agent/: .env.example  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
agents/lead-qualification-agent/agent/: config.py  extractor.py  main.py  main_agent.py
agents/lead-qualification-agent/config/: loader.py  rubric.yaml
agents/lead-qualification-agent/models/: schemas.py
agents/lead-qualification-agent/scoring/: budget.py  grader.py  intent.py  timeline.py
agents/lead-qualification-agent/scripts/: run_example.py
agents/lead-qualification-agent/tests/: test_buyer_agent.py  test_grader.py  test_quick.py  test_scorers.py
agents/lead-qualification-agent/tools/: pipeline.py
agents/orchestrator/: README.md  __init__.py  config.py  orchestrator.py
agents/property-agent/: .env.example  Dockerfile  README.md  pyproject.toml
agents/property-discovery/: .env.example  Dockerfile  README.md  pyproject.toml
agents/recommendation-agent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
agents/shared/: README.md  pyproject.toml
agents/shared/shared/: __init__.py  backend_client.py  base_agent.py  schemas.py
alembic/: env.py
app/core/: config.py  exceptions.py  security.py
app/db/: models.py  session.py
app/schemas/: schemas.py
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0000_base_schema.py  0001_post_v001_extensions.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/dependencies/: auth.py
backend/app/api/v1/endpoints/: agents.py  auth.py  developers.py  leads.py  properties.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/db/models/: models.py
backend/app/db/seeds/: seed_developers.py
backend/app/orchestration/: __init__.py  config.py  orchestrator.py
backend/app/schemas/: schemas.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_leads.py  test_orchestrator.py  test_properties.py  test_property_deduplication.py  test_retry_logging.py  test_users.py  utils.py
db/: Dockerfile
docs/: PHASE2_VERIFICATION.md  database_schema.md
(+32 files in other folders)
