[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stail-agents-shared"
version = "1.0.0"
description = "STAIL Realty OS — Shared agent utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "groq>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
